--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <section id="root" class="todo-list"></section>
 </body>
 
 </html>
